tests/lime/fail/tokens/label_rest/byte_255.wsa
jmp .lÿ .lÿ: push 255
